tests/negative/gold/bad_literal_test.gold
tests/negative/bad_literal_test.toit:6:9: error: Invalid number literal
  print 0xnope
        ^~
tests/negative/bad_literal_test.toit:6:11: error: Unresolved identifier: 'nope'
  print 0xnope
          ^~~~
tests/negative/bad_literal_test.toit:6:3: error: Argument mismatch for 'print'
Too many arguments provided
  print 0xnope
  ^~~~~
Compilation failed.
